# ThrustSAXPY

./: .gitignore  CMakeLists.txt  Makefile  Makefile.handgen  README.md  ThrustSAXPY.sln
ThrustSAXPY/: ThrustSAXPY.vcxproj  compile.sh  kernel.cu
image-classifier/: CMakeLists.txt  README.md  environment.yml
image-classifier/include/: classifier.h  graph.h  image_loader.h  minimal.h
image-classifier/pysrc/: README.md  environment.yml
image-classifier/pysrc/tests/: test_medmnist.py
image-classifier/src/: classifier.cu  graph.cu  image_loader.cu  main.cu  minimal.cu
image-classifier/tests/: test_cudnn_gtest.cu  test_gtest.cpp
src/: compile.sh  detect_compute_capability.cpp  thrustNN.cu  thrustSAXPY.cu
